--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
+  "homepage": "https://125rpatil.github.io/WebClient/",
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
